--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -61,7 +61,7 @@ header {
 }
 .loaded.scroll-up:not(.nav-open) header{
 	//background: #fff;
-	transform: translateY(0);
+	//transform: translateY(0);
 }
 .loaded.scroll-down:not(.nav-open) header{
 	//background: #fff;
